--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -673,9 +673,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 1000
         },
-        "outputId": "a13828d7-1332-4190-cb7a-4b86539d47b1"
+        "outputId": "02923f0f-2304-489e-ac26-25508e859e00"
       },
       "source": [
         "level=5\n",
@@ -694,19 +694,217 @@
         "for h in range(h_count):\n",
         "  for w in range(w_count):\n",
         "    region = read_slide(slide, \n",
-        "                        x=h*size*factor, \n",
-        "                        y=w*size*factor, \n",
+        "                        x=w*size*factor, \n",
+        "                        y=h*size*factor, \n",
         "                        level=level, \n",
         "                        width=size, \n",
-        "                        height=size)[:,:,0]"
+        "                        height=size)\n",
+        "    tissue_pixels = list(find_tissue_pixels(region))\n",
+        "    percent_tissue = len(tissue_pixels) / float(region.shape[0] * region.shape[0]) * 100\n",
+        "    print(w,h,percent_tissue)"
       ],
-      "execution_count": 46,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Level 5, dimensions: (1920, 1680) downsample factor 32\n",
-            "1920 1664\n"
+            "1920 1664\n",
+            "0 0 0.0\n",
+            "1 0 0.0\n",
+            "2 0 0.01220703125\n",
+            "3 0 0.213623046875\n",
+            "4 0 0.457763671875\n",
+            "5 0 0.09765625\n",
+            "6 0 0.567626953125\n",
+            "7 0 0.738525390625\n",
+            "8 0 0.6103515625\n",
+            "9 0 0.01220703125\n",
+            "10 0 0.421142578125\n",
+            "11 0 0.042724609375\n",
+            "12 0 0.537109375\n",
+            "13 0 0.335693359375\n",
+            "14 0 0.067138671875\n",
+            "0 1 0.018310546875\n",
+            "1 1 0.018310546875\n",
+            "2 1 0.286865234375\n",
+            "3 1 0.604248046875\n",
+            "4 1 0.152587890625\n",
+            "5 1 0.433349609375\n",
+            "6 1 0.30517578125\n",
+            "7 1 2.996826171875\n",
+            "8 1 15.411376953125\n",
+            "9 1 0.103759765625\n",
+            "10 1 0.408935546875\n",
+            "11 1 0.1220703125\n",
+            "12 1 0.189208984375\n",
+            "13 1 0.201416015625\n",
+            "14 1 0.384521484375\n",
+            "0 2 0.067138671875\n",
+            "1 2 0.091552734375\n",
+            "2 2 0.067138671875\n",
+            "3 2 0.018310546875\n",
+            "4 2 0.054931640625\n",
+            "5 2 7.171630859375\n",
+            "6 2 18.2861328125\n",
+            "7 2 54.217529296875\n",
+            "8 2 88.2080078125\n",
+            "9 2 66.748046875\n",
+            "10 2 21.234130859375\n",
+            "11 2 0.40283203125\n",
+            "12 2 0.262451171875\n",
+            "13 2 0.482177734375\n",
+            "14 2 0.396728515625\n",
+            "0 3 0.274658203125\n",
+            "1 3 0.146484375\n",
+            "2 3 0.762939453125\n",
+            "3 3 0.1708984375\n",
+            "4 3 16.107177734375\n",
+            "5 3 47.900390625\n",
+            "6 3 74.951171875\n",
+            "7 3 93.7255859375\n",
+            "8 3 98.88916015625\n",
+            "9 3 99.420166015625\n",
+            "10 3 92.620849609375\n",
+            "11 3 34.368896484375\n",
+            "12 3 0.970458984375\n",
+            "13 3 0.347900390625\n",
+            "14 3 0.079345703125\n",
+            "0 4 0.177001953125\n",
+            "1 4 0.25634765625\n",
+            "2 4 1.5869140625\n",
+            "3 4 11.590576171875\n",
+            "4 4 56.195068359375\n",
+            "5 4 81.5185546875\n",
+            "6 4 93.011474609375\n",
+            "7 4 42.29736328125\n",
+            "8 4 63.702392578125\n",
+            "9 4 99.2431640625\n",
+            "10 4 99.560546875\n",
+            "11 4 96.746826171875\n",
+            "12 4 22.015380859375\n",
+            "13 4 0.152587890625\n",
+            "14 4 0.042724609375\n",
+            "0 5 0.006103515625\n",
+            "1 5 0.10986328125\n",
+            "2 5 10.63232421875\n",
+            "3 5 38.031005859375\n",
+            "4 5 43.194580078125\n",
+            "5 5 95.001220703125\n",
+            "6 5 88.73291015625\n",
+            "7 5 76.25732421875\n",
+            "8 5 90.1611328125\n",
+            "9 5 98.846435546875\n",
+            "10 5 99.20654296875\n",
+            "11 5 99.51171875\n",
+            "12 5 61.7919921875\n",
+            "13 5 0.067138671875\n",
+            "14 5 0.042724609375\n",
+            "0 6 0.048828125\n",
+            "1 6 0.042724609375\n",
+            "2 6 19.671630859375\n",
+            "3 6 33.67919921875\n",
+            "4 6 42.913818359375\n",
+            "5 6 68.26171875\n",
+            "6 6 77.08740234375\n",
+            "7 6 99.053955078125\n",
+            "8 6 99.127197265625\n",
+            "9 6 99.20654296875\n",
+            "10 6 99.1455078125\n",
+            "11 6 98.193359375\n",
+            "12 6 71.22802734375\n",
+            "13 6 0.50048828125\n",
+            "14 6 0.164794921875\n",
+            "0 7 0.30517578125\n",
+            "1 7 0.0\n",
+            "2 7 26.715087890625\n",
+            "3 7 32.99560546875\n",
+            "4 7 56.3720703125\n",
+            "5 7 66.51611328125\n",
+            "6 7 84.02099609375\n",
+            "7 7 99.639892578125\n",
+            "8 7 98.9990234375\n",
+            "9 7 98.9990234375\n",
+            "10 7 99.30419921875\n",
+            "11 7 92.68798828125\n",
+            "12 7 40.350341796875\n",
+            "13 7 1.507568359375\n",
+            "14 7 0.10986328125\n",
+            "0 8 1.08642578125\n",
+            "1 8 0.01220703125\n",
+            "2 8 11.53564453125\n",
+            "3 8 35.113525390625\n",
+            "4 8 52.490234375\n",
+            "5 8 25.8056640625\n",
+            "6 8 46.051025390625\n",
+            "7 8 97.991943359375\n",
+            "8 8 99.0966796875\n",
+            "9 8 98.602294921875\n",
+            "10 8 99.755859375\n",
+            "11 8 72.96142578125\n",
+            "12 8 4.644775390625\n",
+            "13 8 0.042724609375\n",
+            "14 8 0.018310546875\n",
+            "0 9 0.28076171875\n",
+            "1 9 0.0244140625\n",
+            "2 9 0.213623046875\n",
+            "3 9 29.11376953125\n",
+            "4 9 48.333740234375\n",
+            "5 9 36.785888671875\n",
+            "6 9 60.02197265625\n",
+            "7 9 96.2890625\n",
+            "8 9 58.9599609375\n",
+            "9 9 53.564453125\n",
+            "10 9 56.53076171875\n",
+            "11 9 11.407470703125\n",
+            "12 9 0.2685546875\n",
+            "13 9 0.0244140625\n",
+            "14 9 0.030517578125\n",
+            "0 10 0.091552734375\n",
+            "1 10 0.0\n",
+            "2 10 0.0\n",
+            "3 10 15.277099609375\n",
+            "4 10 31.719970703125\n",
+            "5 10 59.50927734375\n",
+            "6 10 59.21630859375\n",
+            "7 10 29.1748046875\n",
+            "8 10 16.49169921875\n",
+            "9 10 9.759521484375\n",
+            "10 10 4.681396484375\n",
+            "11 10 0.103759765625\n",
+            "12 10 0.006103515625\n",
+            "13 10 0.091552734375\n",
+            "14 10 2.79541015625\n",
+            "0 11 0.0\n",
+            "1 11 0.0\n",
+            "2 11 0.0\n",
+            "3 11 0.03662109375\n",
+            "4 11 10.699462890625\n",
+            "5 11 9.26513671875\n",
+            "6 11 5.364990234375\n",
+            "7 11 0.091552734375\n",
+            "8 11 0.0\n",
+            "9 11 0.09765625\n",
+            "10 11 20.42236328125\n",
+            "11 11 0.10986328125\n",
+            "12 11 0.042724609375\n",
+            "13 11 18.4326171875\n",
+            "14 11 57.696533203125\n",
+            "0 12 0.0\n",
+            "1 12 0.0\n",
+            "2 12 0.0\n",
+            "3 12 0.0\n",
+            "4 12 0.0\n",
+            "5 12 0.0\n",
+            "6 12 0.0\n",
+            "7 12 0.0\n",
+            "8 12 0.042724609375\n",
+            "9 12 0.006103515625\n",
+            "10 12 2.203369140625\n",
+            "11 12 41.85791015625\n",
+            "12 12 10.04638671875\n",
+            "13 12 37.29248046875\n",
+            "14 12 44.573974609375\n"
           ],
           "name": "stdout"
         }
