--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -426,10 +426,10 @@
       "metadata": {
         "id": "14W75yz8wOcz",
         "colab_type": "code",
-        "outputId": "e0f19388-61d9-4746-ec10-6a08d57f1070",
+        "outputId": "cdc9f4ad-760a-42dc-bbe8-816fd9905f0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 284
+          "height": 301
         }
       },
       "source": [
@@ -438,21 +438,18 @@
         "# This math can be tricky to get right, debug carefully.\n",
         "# Here, we're \"aiming\" for the top right blob in the image above.\n",
         "region = read_slide(tumor_mask, x=350 * 128, y=120 * 128, level=7, width=50, height=50)[:,:,0]\n",
-        "plt.imshow(region)"
+        "plt.imshow(region)\n",
+        "print(region[40])"
       ],
-      "execution_count": 9,
+      "execution_count": 58,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f95c167e5c0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
+          "output_type": "stream",
+          "text": [
+            "[0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0\n",
+            " 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
+          ],
+          "name": "stdout"
         },
         {
           "output_type": "display_data",
@@ -681,7 +678,9 @@
         "blank_img = [[[255 for k in range(3)] for j in range(n)] for i in range(n)]\n",
         "\n",
         "#function to get good patches only\n",
-        "def get_good_patches(slide, level=5, size=128, percent=5, plot=False, slide_path=\"\"):\n",
+        "def get_good_patches(slide, tumor_mask, level=5, size=128, percent=5, plot=False, slide_path=\"\"):\n",
+        "  #set data\n",
+        "  data=[]\n",
         "  #get factor\n",
         "  factor = int(slide.level_downsamples[level])\n",
         "  #print only if plot is on\n",
@@ -711,7 +710,29 @@
         "          plt.imshow(region)\n",
         "        else:\n",
         "          plt.imshow(blank_img)\n",
-        "        plt.axis('off')"
+        "        plt.axis('off')\n",
+        "\n",
+        "      isTumor=0\n",
+        "      tumorSum=0\n",
+        "      \n",
+        "      #do we use this patch?\n",
+        "      if percent_tissue>=percent:\n",
+        "        #has tumor?\n",
+        "        tumor_region = read_slide(tumor_mask, \n",
+        "                          x=w*size*factor, \n",
+        "                          y=h*size*factor, \n",
+        "                          level=level, \n",
+        "                          width=size, \n",
+        "                          height=size)[:,:,0]\n",
+        "        tumorData=np.array(tumor_region)\n",
+        "        tumorSum=np.sum(tumorData)\n",
+        "        if tumorSum > 0:\n",
+        "          isTumor=1\n",
+        "\n",
+        "        data.append({'slide_path':slide_path, 'level':level, 'size':size, 'patch_x':w, 'patch_y':h, 'tumor':isTumor})\n",
+        "      \n",
+        "  #return data\n",
+        "  return data"
       ],
       "execution_count": 0,
       "outputs": []
@@ -725,16 +746,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 853
         },
-        "outputId": "0f3cd766-f8a3-4dd3-e933-5cf50dc50e4e"
+        "outputId": "6df60563-e631-4e4b-bfa2-511732258061"
       },
       "source": [
         "#test out the slide with 3% tissue\n",
         "level=5\n",
         "size=128 #128 by 128 grid\n",
         "\n",
-        "get_good_patches(slide, level, size, percent=3, plot=True, slide_path=slide_path)"
+        "trial_data = get_good_patches(slide, tumor_mask, level, size, percent=3, plot=True, slide_path=slide_path)"
       ],
-      "execution_count": 49,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +929,272 @@
         "colab_type": "text"
       },
       "source": [
-        "As you can see, we are creating a lot of training efficiency by removing the grey areas.  Now that we can get the right patches, lets making our dataset."
+        "As you can see, we are creating a lot of training efficiency by removing the grey areas.  Now lets look at the data we produce and confirm the tumor is binary classified correctly."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pcEcLo0S_70f",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 669
+        },
+        "outputId": "28715fa9-e454-4bb8-b627-49ae489660ec"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "trial_df = pd.DataFrame(trial_data)\n",
+        "trial_df.iloc[20:40]"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>slide_path</th>\n",
+              "      <th>level</th>\n",
+              "      <th>size</th>\n",
+              "      <th>patch_x</th>\n",
+              "      <th>patch_y</th>\n",
+              "      <th>tumor</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>20</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>8</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>21</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>9</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>22</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>10</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>23</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>11</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>24</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>12</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>2</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>27</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>4</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>28</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>5</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>29</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>6</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>30</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>7</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>31</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>8</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>32</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>9</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>33</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>10</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>34</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>11</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>35</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>12</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>36</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>2</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>37</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>3</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>38</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>4</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>39</th>\n",
+              "      <td>tumor_091.tif</td>\n",
+              "      <td>5</td>\n",
+              "      <td>128</td>\n",
+              "      <td>5</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       slide_path  level  size  patch_x  patch_y  tumor\n",
+              "20  tumor_091.tif      5   128        8        4      0\n",
+              "21  tumor_091.tif      5   128        9        4      0\n",
+              "22  tumor_091.tif      5   128       10        4      0\n",
+              "23  tumor_091.tif      5   128       11        4      1\n",
+              "24  tumor_091.tif      5   128       12        4      0\n",
+              "25  tumor_091.tif      5   128        2        5      0\n",
+              "26  tumor_091.tif      5   128        3        5      0\n",
+              "27  tumor_091.tif      5   128        4        5      0\n",
+              "28  tumor_091.tif      5   128        5        5      0\n",
+              "29  tumor_091.tif      5   128        6        5      0\n",
+              "30  tumor_091.tif      5   128        7        5      0\n",
+              "31  tumor_091.tif      5   128        8        5      0\n",
+              "32  tumor_091.tif      5   128        9        5      0\n",
+              "33  tumor_091.tif      5   128       10        5      0\n",
+              "34  tumor_091.tif      5   128       11        5      1\n",
+              "35  tumor_091.tif      5   128       12        5      0\n",
+              "36  tumor_091.tif      5   128        2        6      0\n",
+              "37  tumor_091.tif      5   128        3        6      0\n",
+              "38  tumor_091.tif      5   128        4        6      0\n",
+              "39  tumor_091.tif      5   128        5        6      0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
+        }
       ]
     },
     {
@@ -919,6 +1205,58 @@
       },
       "source": [
         "###Create Training Dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7n000_8a0y3A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "#create master data [slide_path, level, patch_x, patch_y, tumor]\n",
+        "master_patches = []\n",
+        "\n",
+        "#all slides\n",
+        "data_slides=['001','002','005','012','016','019','023','031','035','038','057','059','064','075','078','081','084','091','094','096','101','110']\n",
+        "\n",
+        "for slide_num in ['091']:\n",
+        "  \n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s2W-qa-n9p7I",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "1fd60ae6-e247-4abb-9041-721722569eab"
+      },
+      "source": [
+        "tumorData=np.array(mask_image)\n",
+        "tumorSum=np.sum(tumorData)\n",
+        "print(tumorSum)\n",
+        "print(tumorData[1000])"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "46752\n",
+            "[0 0 0 ... 0 0 0]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
