--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -1223,8 +1223,10 @@
         "#all slides\n",
         "data_slides=['001','002','005','012','016','019','023','031','035','038','057','059','064','075','078','081','084','091','094','096','101','110']\n",
         "\n",
-        "for slide_num in ['091']:\n",
+        "for slide_num in data_slides:\n",
         "  \n",
+        "\n",
+        "\n",
         "\n"
       ],
       "execution_count": 0,
@@ -1239,7 +1241,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "4d952a2c-486a-4e4f-9cbd-3053bf08a070"
+        "outputId": "f11f8148-83bd-4bf7-8654-42da31f9b7d4"
       },
       "source": [
         "tumorData=np.array(mask_image)\n",
@@ -1247,7 +1249,7 @@
         "print(tumorSum)\n",
         "print(tumorData[1000])"
       ],
-      "execution_count": 83,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
